app/assets/stylesheets/header.css
.logo {
  height: 47px;
  width: 140px;
  margin-left: 10px;
}

.header-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 966px;
  height: 40px;
}

.search-bar {
  display: table-cell;
  align-items: center;
  display: flex;
  width: 650px;
}

.find {
  border-radius: 4px 0 0 4px;
  position: relative;
  padding: 8px 12px;
  background: #fff;
  margin: 0;
  height: 36px;
  line-height: 20px;
  width:50%;
}

.search-bar label span {
  float: left;
  margin-right: 5px;
  font-weight: bold;
  color: #333;
}

.search-bar label input {
  border: none;
  font-size: 14px;
  outline: none;
}

.city {
  padding: 8px 12px;
  border: none;
  border-radius: 0;
  background: #fff;
  margin: 0;
  height: 36px;
  line-height: 20px;
  position: relative;
  width:50%;
  pointer-events:none;
}

.search-button {
  border: 0;
  border-radius: 0 4px 4px 0;
  background: #bd1f1f;
  line-height: 36px;
  padding: 0 15px;
  width: 54px;
}

.search-button img {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  margin-bottom: 2px;
}

.nav-bar {
  display: flex;
  justify-content: flex-end;
  align-items: baseline;
  width: 972px;
  height: 27px;
}

.logged-in-message h3 {
  color: white;
  font-weight: normal;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-right: 10px;
}

.logout-button {
  background-color: #BD1F1F;
  color: white;
  border: none;
  width: 70px;
  height: 20px;
  border-radius: 3px;
  font-size: 12px;
  font-weight: bold;
  margin-top: 3px;
}

.logout-button:hover {
  background-color: #8d0005;
  text-decoration: none;
}

.header-signup-button {
  display: flex;
  background-color: #BD1F1F;
  border-color: #8d0005;
  border-radius: 4px;
  width: 104px;
  height: 36px;
  text-decoration: none;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 15px;
  font-weight: bolder;
  padding: 6px 12px;
}

.header-signup-button:hover {
  background-color: #aa1b1b;
  text-decoration: none;
}


.nav-login-button {
  display: flex;
  background-color: #BD1F1F;
  border-color: #8d0005;
  width: 104px;
  height: 27px;
  text-decoration: none;
  align-items: center;
  justify-content: center;
  color: white;
  font-size: 13px;
  font-weight: bolder;
  padding: 3px 12px;
}

.nav-login-button:hover {
  background-color: #8d0005;
  text-decoration: none;
}

